[refactor] Code improvement: Use standard charset